# celular-camera-mapping

./: .flake8  .gitignore  README.md  a34_mapping.json  device.py  device_mapping_cli.py  format_code.bat  initial_filter.json  main.py  output.json  pyproject.toml  testando.py  utils.py
.github/workflows/: release.yml
Motorola-g32/: initial_filter.json
Samsung-A04e/: initial_filter.json  initial_filter_with_menu.json  initial_filter_with_menu_other_cam_mode.json  initial_filter_with_menu_other_mode.json  initial_filter_with_menu_times.json  mapping_with_menu_all_itens_cam_and_mode.json  mapping_with_menu_all_itens_cam_and_mode_and_times.json
Samsung-A34/: initial_filter.json  initial_filter_with_menu.json
camera_mapper/: __init__.py  camera_mapper.py  cli.py  constants.py  device.py  image_labeling.py  mapper.py  utils.py
camera_mapper/core/: camera_mapper.py  device.py  frames_processing.py  image_processing.py
camera_mapper/core/fsm/: fsm.py  fsm.xml  model.py
camera_mapper/entities/: __init__.py  clickable_box.py
camera_mapper/fsm/: fsm.py  model.py
camera_mapper/screen_processing/: image_processing.py  xml_processing.py
core/: frames_processing.py  image_processing.py
entities/: __init__.py  clickable_box.py  point.py
pi/: process_frames.py  process_image.py
process/: frames.py  image.py
