[project]
name = "camera-mapper"
version = "0.1.0"
description = "CLI to map the camera app from different android devices"
authors = [
    {name = "goncamateus",email = "mateus.gm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sewar>=0.4.6,<0.5.0",
    "numpy==1.26.1",
    "typer>=0.15.1,<0.16.0",
    "device-manager @ https://github.com/Curso-de-Robotica-e-IA/device_manager/releases/download/v1.3.4/device_manager-1.3.4-py3-none-any.whl",
    "isort (>=6.0.1,<7.0.0)",
    "transitions (>=0.9.2,<0.10.0)"
]

[project.scripts]
camapper = "camera_mapper.cli:app"

[tool.poetry.group.dev.dependencies]
ipython = "^9.2.0"
ruff = "^0.11.10"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
